20210712:
  * added "add bench.mlperf.system" and improved MLPerf docs

20210710:
  * added Paretor frontier filter demo
  * added improved MLPerf dashboard configuration

20210706:
  * added mlcube
  * started working on a community version of the MLPerf inference submission system

20210628:
  * added latest tags to the package:lib-tensorflow-source

20210626:
  * added wfe:result template for the new CK dashboard
  * added result.cfg to configure new CK dashboards:
    * demo.mlperf.explore-threads
    * demo.mlperf.inference
    * demo.mlperf.mobilenets
    * demo.request.asplos18
  * added demo of results for new CK dashboards:
    * demo.mlperf.inference
    * demo.mlperf.mobilenets.all
    * demo.request.asplos18

20210611:
  * removing unneeded entries

20210602:
  * removed platform.* (except platform.init) because it's available in repo:ck-crowdtuning-platforms

20210601:
  * major clean up of testing of all Docker images

20210521:
  * regular update of stable components

20210418:
  * removed modules (they are now in the CK default repo: 
    https://github.com/ctuning/ck/tree/master/ck/repo/module

20210416:
  * [gfursin] extended module:package to ask a user to select a variation 
    for a given package when there are multiple versions available.

20210403:
  * [gfursin] fixed TFLite packages 1.13, 1.14 and 1.15 (eigen library).
     https://github.com/ctuning/ck/issues/138
     https://github.com/ctuning/ck/issues/139

20210324:
  * [sztaylor] fix cpu & gpu set_freq commands

20210226: 
  * improvements from Arm to 2 CK modules: platform.cpu and platform.gpu:
    https://github.com/ctuning/ck-env/pull/113