@@ -1,0 +1,54 @@
+#
+# Collective Knowledge (individual environment - setup)
+#
+# See CK LICENSE.txt for licensing details
+# See CK COPYRIGHT.txt for copyright details
+#
+# Developer: Grigori Fursin, https://fursin.net
+#
+
+import os
+
+##############################################################################
+# setup environment setup
+
+def process(i):
+
+    cus=i.get('customize',{})
+    install_env = cus.get('install_env', {})
+
+    fp=cus.get('full_path','')
+    install_root    = os.path.dirname(fp)
+
+    env={}
+
+    ep=cus['env_prefix']
+
+    # Provide the installation root where all files live:
+    env[ep + '_ROOT'] = install_root
+
+    # Init common variables, they are set for all models:
+    #
+    # This group should end with _FILE prefix e.g. TFLITE_FILE
+    # This suffix will be cut off and prefixed by cus['env_prefix']
+    # so we'll get vars like CK_ENV_TENSORFLOW_MODEL_TFLITE
+    for varname in install_env.keys():
+        if varname.endswith('_FILE'):
+            env[ep + '_' + varname[:-len('_FILE')]] = os.path.join(install_root, install_env[varname])
+
+    # Init model-specific variables:
+    #
+    # This other group should be started with MODEL_ prefix e.g. MODEL_MOBILENET_RESOLUTION
+    # This prefix will be cut off as it already contained in cus['env_prefix']
+    # so we'll get vars like CK_ENV_TENSORFLOW_MODEL_MOBILENET_RESOLUTION
+    for varname in install_env.keys():
+        if varname.startswith('MODEL_'):
+            env[ep+varname[len('MODEL'):]] = install_env[varname]
+
+    # Just copy those without any change in the name:
+    #
+    for varname in install_env.keys():
+        if varname.startswith('ML'):
+            env[varname] = install_env[varname]
+
+    return {'return':0, 'env':env}
